--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         console.log("working...");
         return false;
       }
-      // setTimeout('redirect()', 5000;
+      setTimeout('redirect()', 5000;
     </script>
   </head>
   <body>
